# iloveu

./: .gitignore  Cargo.toml  default.nix  shell.nix
iloveu-lib/: Cargo.toml
iloveu-server/: Cargo.toml
iloveu-server/src/: db.rs  lib.rs  main.rs  session.rs  types.rs
iloveu-yew/: Cargo.toml  index.html  styles.css
iloveu-yew/src/: add_media.rs  add_tag.rs  home.rs  lib.rs  main.rs
