[package]
name = "iloveu-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
tokio = { version = "1.0", features = ["fs", "io-util"] }
sha2 = "0.10"
rand = "0.8"
actix-cors = "0.6"
base64 = "0.21"
serde_json = "1.0"
actix-multipart = "0.4"
futures-util = {version = "0.3.17", default-features = false, features = ["std"]}
serde = "1.0"
tokio-util = "0.7"
futures-core = "0.3"
async_zip = "0.0.9"
clap = {version = "3.2", features=["derive"]}
env_logger = "0.9"
